[tool.poetry]
name = "asteroids"
version = "0.1.0"
description = ""
authors = ["Wentao He <wentaohe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
requests = "^2.26.0"
vcrpy = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
